# legion-airflow

./: .gitignore  .pylintrc  Jenkinsfile  README.md  pipeline.Dockerfile  pyproject.toml  setup.py
ansible/: deploy.yml
ansible/vars/: common-vars.yaml
containers/agent/: Dockerfile
containers/airflow/: Dockerfile  create_secrets.py
containers/ansible/: Dockerfile
dags/: legion_dag.py
deploy/: Pipeline.groovy  ci.Jenkinsfile  deploy-airflow.Jenkinsfile  legionPipeline.groovy  undeploy-airflow.Jenkinsfile
deploy/ansible/: deploy.yml  terminate.yml  undeploy.yml
deploy/ansible/vars/: common-vars.yaml  vars.yaml
deploy/helms/airflow/: values.yaml
helms/airflow/templates/: dag-filler.yaml  flower.yaml  pvc.yaml  scheduler.yaml  worker.yaml
k8s/agent/: Dockerfile  pipeline.Dockerfile
k8s/airflow/: Dockerfile
k8s/ansible/: Dockerfile
legion/airflow/: deployment.py  edi.py  model.py  packaging.py  plugin.py  training.py
legion_airflow/: Pipfile  setup.py
legion_airflow/hooks/: s3_handler.py
legion_airflow/legion_airflow/auth/: dex_auth.py
legion_airflow/legion_airflow/hooks/: k8s_base_hook.py  s3_handler.py  s3_hook.py
pipelines/: Pipeline.groovy  build-airflow.Jenkinsfile  ci.Jenkinsfile  deploy-airflow.Jenkinsfile  undeploy-airflow.Jenkinsfile
plugin/: setup.py
plugin/legion_airflow/: __init__.py  legion_plugin.py
robot/resources/: keywords.robot  variables.robot
robot/tests/: airflow.robot  connectivity.robot
tests/robot/: load_variables_from_profiles.py  run_robot_tests.sh
tools/: update_version_id
(+76 files in other folders)
