[tool.poetry]
name = "legion-airflow"
version = "0.0.1"
description = "Airflow Operators for Legion "

license = "Apache-2.0"

authors = [
    "Jason_Nerothin@epam.com <Jason_Nerothin@epam.com>"
]

readme = 'README.md'

repository = "https://github.com/legion-platform/legion-airflow"
homepage = "https://github.com/legion-platform/legion-airflow"

keywords = ['legion', 'airflow', 'operators']

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.9"
setuptools = "^41.2"
# Dependencies with extras
apache-airflow = { version = "1.10.3" } # , extras = [ "gcp" ] }
legion-sdk = { path = "../legion/legion/sdk/"}

# Git dependencies
# cleo = { git = "https://github.com/sdispater/cleo.git", branch = "master" }

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.4"

[tool.poetry.scripts]
my-script = 'dags:tutorial_dag.py'